--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
 
 html{
-
+     
     scroll-behavior: smooth;
 }
 body{
+   
     background-color:rgb(5, 5, 39);
     color:white;
     
 }
+
 
 input[type="text"], [type="email"], textarea {
     width: 100%;
@@ -23,9 +25,9 @@ input[type="submit"]{
 }
 
 .container-fluid{
-    position: relative;
+  
     border:2px solid transparent; 
-    min-height:42rem;
+    min-height:100vh;
       
 }
 
@@ -48,6 +50,16 @@ h3,h4,h5,h6{
     font-weight: normal;
 }
 
+#insidemyprojects img{
+    width:100%;
+    height:280px;
+
+}
+
+#insidemyprojects .row{
+    margin-top:180px;
+}
+
 @media only screen and (max-width: 1130px) {
     #contactme .container{
         width:70vw;
@@ -57,5 +69,18 @@ h3,h4,h5,h6{
   @media only screen and (max-width: 815px) {
     #contactme .container{
         width:90vw;
+    }
+  }
+
+  @media only screen and (max-width: 400px) {
+    #insidemyprojects img{
+        width:100%;
+        height:170px;
+    }
+  }
+
+@media only screen and (max-width: 990px) {
+    #insidemyprojects .row{
+        margin-top:70px;
     }
   }
