modified:   bootstrap-svgrepo-com.svg 	modified:   css-svgrepo-com.svg 	modified:   html-svgrepo-com.svg 	modified:   index.html 	modified:   js-svgrepo-com.svg 	modified:   laravel-svgrepo-com.svg 	modified:   mysql-svgrepo-com.svg 	modified:   php-svgrepo-com.svg 	modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,10 @@ input[type="submit"]{
       
 }
 
+h2,h3,h4,h5,h6,p{
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
 #projects .container{
     
     border: 1px solid gray;
