--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
 html{
      
     scroll-behavior: smooth;
+    
 }
 body{
    
@@ -25,12 +26,10 @@ input[type="submit"]{
     min-height:60px
 }
 
-.container-fluid{
+.full-height{
   
-    border:2px solid transparent; 
     min-height:100vh;
-  
-      
+ 
 }
 
 .tech-stack{
