--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ h2,h3,h4,h5,h6,p{
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-#projects .container{
+#projects .box-body{
     
     border: 1px solid gray;
     border-top-left-radius:20px;
