--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,13 @@ h3,h4,h5,h6{
     }
   }
 
+  @media only screen and (max-width: 370px) {
+    #insidemyprojects img{
+        width:100%;
+        height:145px;
+    }
+  }
+
 @media only screen and (max-width: 990px) {
     #insidemyprojects .row{
         margin-top:70px;
