--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,14 @@ h3,h4,h5,h6{
     margin-top:130px;
 }
 
+@media only screen and (max-width: 1320px) {
+  #insidemyprojects img{
+      width:90%;
+      height:270px;
+  
+  }
+}
+
 @media only screen and (max-width: 1199px) {
     #insidemyprojects img{
         width:75%;
