--- a/styles.css
+++ b/styles.css
@@ -168,16 +168,17 @@ h3,h4,h5,h6{
   @media only screen and (max-width: 400px) {
     #insidemyprojects img{
         width:100%;
-        height:170px;
+        height:20px;
     }
   }
-
+/*
   @media only screen and (max-width: 370px) {
     #insidemyprojects img{
         width:100%;
         height:145px;
     }
   }
+  */
 
 @media only screen and (max-width: 990px) {
     #insidemyprojects .row{
