--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,7 @@ h3,h4,h5,h6{
   @media only screen and (max-width: 400px) {
     #insidemyprojects img{
         width:100%;
-     
+        height:240px;
     }
   }
 /*
